--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <!-- Menú -->
     <header class="cabecera">
-        <img class="cabecera__logo" src="assets/vector.png" alt="Logo">
-        <h1 class="cabecera__titulo">Alura Latam</h1>
+            <img class="cabecera__logo" src="assets/vector.png" alt="Logo">
+            <h1 class="cabecera__titulo">Kevin-AC</h1>
         <nav class="navegacion">
             <ul class="navegacion__lista">
                 <li class="navegacion__elemento"><a href="#sobre-mi">Sobre mí</a></li>
@@ -24,7 +24,7 @@
                 <li class="navegacion__elemento"><a href="#aficiones">Aficiones</a></li>
                 <li class="navegacion__elemento"><a href="#formacion">Formación</a></li>
                 <li class="navegacion__elemento"><a href="#proyectos">Proyectos</a></li>
-                <li class="navegacion__elemento"><a href="#contacto">Contacto</a></li>
+                <li class="navegacion__elemento"><a href="#contacto">kevin.argumedo@gmail.com</a></li>
             </ul>
         </nav>
     </header>
@@ -33,8 +33,8 @@
     <section class="presentacion">
         <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
         <div class="presentacion__contenedor">
-            <h2 class="presentacion__titulo">Hola, mi nombre es Alura Latam y construyo páginas web</h2>
-            <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
+            <h2 class="presentacion__titulo">Hola, mi nombre es Kevin Argumedo y construyo páginas web</h2>
+            <p class="presentacion__subtitulo">Soy formado en desarrollo web y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
             <ul class="redes">
                 <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
                 <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
@@ -47,8 +47,8 @@
     <!-- Sección sobre mí -->
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+        <p class="sobre-mi__texto">Estudiante autodidacta, desarrollador web. Tengo experiencia en maquetado de páginas con HTML, CSS y JavaScript a través de retos de Frontend Mentor. Participé en el curso de la misión Tic 2022 donde Trabaje en equipo enfocado en la parte visual, pude aplicar mis conocimientos en proyectos colaborativos reales, y asumí roles de liderazgo en algunas ocasiones.</p>
+        
         <!-- Firma opcional -->
         <img class="sobre-mi__firma" src="assets/signature.png" alt="Firma">
     </section>
@@ -64,14 +64,6 @@
             <li class="habilidades__elemento">
                 <img class="habilidades__icono" src="assets/js_icon.png" alt="JavaScript">
                 <p class="habilidades__nombre">JavaScript</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/php_icon.png" alt="PHP">
-                <p class="habilidades__nombre">PHP</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/nodejs_icon.png" alt="Node.js">
-                <p class="habilidades__nombre">Node.js</p>
             </li>
             <li class="habilidades__elemento">
                 <img class="habilidades__icono" src="assets/react_icon.png" alt="React">
@@ -91,10 +83,6 @@
             <li class="aficiones__elemento">
                 <img class="aficiones__icono" src="assets/skate_icon.png" alt="Patinaje">
                 <p class="aficiones__nombre">Patinaje</p>
-            </li>
-            <li class="aficiones__elemento">
-                <img class="aficiones__icono" src="assets/guitar_icon.png" alt="Tocar bajo">
-                <p class="aficiones__nombre">Tocar bajo</p>
             </li>
             <li class="aficiones__elemento">
                 <img class="aficiones__icono" src="assets/headphones_icon.png" alt="Oír música">
@@ -121,21 +109,22 @@
         <ul class="formacion__lista">
             <li class="formacion__elemento">
                 <img class="formacion__icono" src="assets/ufpr_logo.png" alt="UFPR">
-                <div>
+                <div class="formacion__texto">
                     <h3 class="formacion__nombre">Análisis de datos</h3>
                     <p class="formacion__detalle">2018 - UFPR</p>
                 </div>
             </li>
+            
             <li class="formacion__elemento">
                 <img class="formacion__icono" src="assets/alura_logo.png" alt="Alura">
-                <div>
+                <div class="formacion__texto">
                     <h3 class="formacion__nombre">Formación en UX Design</h3>
                     <p class="formacion__detalle">2019 - Alura</p>
                 </div>
             </li>
             <li class="formacion__elemento">
                 <img class="formacion__icono" src="assets/ufrj_logo.png" alt="UFRJ">
-                <div>
+                <div class="formacion__texto">
                     <h3 class="formacion__nombre">Posgrado en diseño</h3>
                     <p class="formacion__detalle">En curso - UFRJ</p>
                 </div>
