--- a/index.html
+++ b/index.html
@@ -147,13 +147,18 @@
 
     <!-- Sección de Contacto -->
     <section class="contacto" id="contacto">
-        <h2 class="contacto__titulo">Contacto</h2>
-        <form class="contacto__formulario">
-            <input class="contacto__campo" type="text" placeholder="Nombre">
-            <input class="contacto__campo" type="email" placeholder="Correo Electrónico">
-            <textarea class="contacto__campo contacto__campo--textarea" placeholder="Mensaje"></textarea>
-            <button class="contacto__boton" type="submit">Enviar</button>
-        </form>
+        <img src="./assets/contact_image.png" alt="">
+        <div class="contacto__form">
+            <h2 class="contacto__titulo">Contacto</h2>
+            <p class="contacto__parrafo">¿Quieres contactarme?
+Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
+            <form class="contacto__formulario">
+                <input class="contacto__campo" type="text" placeholder="Nombre">
+                <input class="contacto__campo" type="email" placeholder="Correo Electrónico">
+                <textarea class="contacto__campo contacto__campo--textarea" placeholder="Mensaje"></textarea>
+                <button class="contacto__boton" type="submit">Enviar</button>
+            </form>
+        </div>
     </section>
 </body>
     <script src="script.js"></script>
