fix:view, add:link target

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <h2 class="presentacion__titulo">Hola, mi nombre es Kevin Argumedo y construyo páginas web</h2>
             <p class="presentacion__subtitulo">Soy formado en desarrollo web y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
             <ul class="redes">
-                <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href="https://github.com/Kevin-AC?tab=repositories">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href="https://www.linkedin.com/in/kevin-argumedo/">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
                 <li class="redes__img"><a href="">Instagram <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="">Currículo <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href="https://drive.google.com/file/d/1QpUU3zRzD0Re-_httuFjzEXzeQ9xUVAJ/view">Currículo <img src="assets/arrow.png" alt="Flecha"></a></li>
             </ul>
         </div>
     </section>
@@ -135,23 +135,28 @@
     <!-- Sección de Proyectos -->
     <section class="proyectos" id="proyectos">
         <h2 class="proyectos__titulo">Experiencia Profesional</h2>
-        <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
+        
+        <div class="proyectos__container">
+            <img class="proyectos__imagen" src="./assets/secretcode_print.png" alt="">
+            <div class="proyectos__contenedor__info">
+                <h3 class="proyectos__nombre">Encriptador de texto</h3>
+                <p class="proyectos__descripcion">Challenge Oracle</p>
+                <div class="proyectos__button__container">
+                    <button class="proyecto__button">Repositório</button>
+                    <button class="proyecto__button">Ver Demo</button>
+                </div>
+            </div>
         </div>
-        <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
-        </div>
+        
     </section>
 
     <!-- Sección de Contacto -->
     <section class="contacto" id="contacto">
-        <img src="./assets/contact_image.png" alt="">
+        <img class="contacto__imagen" src="./assets/contact_image.png" alt="">
         <div class="contacto__form">
             <h2 class="contacto__titulo">Contacto</h2>
             <p class="contacto__parrafo">¿Quieres contactarme?
-Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
+                Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
             <form class="contacto__formulario">
                 <input class="contacto__campo" type="text" placeholder="Nombre">
                 <input class="contacto__campo" type="email" placeholder="Correo Electrónico">
